Add implementation for trie

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@ cmake-build-RelWithDebInfo/
 .idea/
 .fixes-internal/
 scripts/__pycache__/
+
+
+CMakeCache.txt
+CMakeFiles/
+Makefile
+cmake_install.cmake
+googletest-build/
+googletest-download/
+googletest-src/
+lib/
+public-tests
+
