--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,10 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wno-sign-compare -pedantic")
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -fsanitize=undefined,address,leak -fno-sanitize-recover=all -D_GLIBCXX_DEBUG")
 
 
-# set(SOURCES number/number.cpp) 
-# set(HEADERS number/number.h) 
-# set(TESTS number/number-test.cpp) 
-#  
+set(SOURCES number/number.cpp) 
+set(HEADERS number/number.h) 
+set(TESTS number/number-test.cpp) 
+
 if ("${RUN_MODE}" STREQUAL "hard")
 	set(SOURCES ${SOURCES} trie/trie.cpp trie/trie-naive.cpp)
 	set(HEADERS ${HEADERS} trie/trie.h trie/trie-naive.h)
